import jdk.jshell.execution.Util;

public class Main {
    public static void main(String[] args) {
        System.out.println("Lancement du jeu ...");
        System.out.println("-------------------------------");

    }
}